@@ -70,6 +70,7 @@
   (loadw esi ebx -3)
 
   ;; And back we go.
+  (inst stc)
   (inst jmp eax)
 
   ;; Handle the register arg cases.
@@ -78,13 +79,14 @@
   (inst mov edx nil-value)
   (inst mov edi edx)
   (inst mov esi edx)
+  (inst stc)
   (inst jmp eax)
 
   ONE-VALUE ; Note: we can get this, because the return-multiple vop
             ; doesn't check for this case when size > speed.
   (loadw edx esi -1)
   (inst mov esp-tn ebx)
-  (inst add eax 2)
+  (inst clc)
   (inst jmp eax)
 
   TWO-VALUES
@@ -92,6 +94,7 @@
   (loadw edi esi -2)
   (inst mov esi nil-value)
   (inst lea esp-tn (make-ea :dword :base ebx :disp (* -2 n-word-bytes)))
+  (inst stc)
   (inst jmp eax)
 
   THREE-VALUES
@@ -99,6 +102,7 @@
   (loadw edi esi -2)
   (loadw esi esi -3)
   (inst lea esp-tn (make-ea :dword :base ebx :disp (* -3 n-word-bytes)))
+  (inst stc)
   (inst jmp eax))
 
 ;;;; TAIL-CALL-VARIABLE
