@@ -9,6 +9,20 @@
 
 (in-package "SB!VM")
 
+;;; The :full-call assembly-routines must use the same full-call
+;;; unknown-values return convention as a normal call, as some
+;;; of the routines will tail-chain to a static-function. The
+;;; routines themselves, however, take all of their arguments
+;;; in registers (this will typically be one or two arguments,
+;;; and is one of the lower bounds on the number of argument-
+;;; passing registers), and thus don't need a call frame, which
+;;; simplifies things for the normal call/return case. When it
+;;; is neccessary for one of the assembly-functions to call a
+;;; static-function it will construct the required call frame.
+;;; Also, none of the assembly-routines return other than one
+;;; value, which again simplifies the return path.
+;;;    -- AB, 2006/Feb/05.
+
 (!def-vm-support-routine generate-call-sequence (name style vop)
   (ecase style
     ((:raw :none)
@@ -20,7 +34,9 @@
       `((note-this-location ,vop :call-site)
         (inst call (make-fixup ',name :assembly-routine))
         (note-this-location ,vop :single-value-return)
-        (move esp-tn ebx-tn))
+        (inst jmp :nc single-value)
+        (move esp-tn ebx-tn)
+        single-value)
       '((:save-p :compute-only))))))
 
 (!def-vm-support-routine generate-return-sequence (style)
@@ -28,9 +44,6 @@
     (:raw
      `(inst ret))
     (:full-call
-     `(
-       (inst pop eax-tn)
-
-       (inst add eax-tn 2)
-       (inst jmp eax-tn)))
+     `((inst clc)
+       (inst ret)))
     (:none)))
