@@ -8,6 +8,11 @@ changes in sbcl-0.9.11 relative to sbcl-0.9.10:
   * optimization: calling functions via constant symbols -- as in 
     (FUNCALL 'FOO) -- is now roughly as efficient as calling them
     via the function object as in (FUNCALL #'FOO).
+  * optimization: on x86 and x86-64, the calling convention for the
+    case of dealing with an unknown number of values has been altered
+    to be friendlier to the prediction heuristics implemented,
+    particularly with reference to CALL and RET pairing.  (thanks to
+    Alastair Bridgewater)
   * enhancement: CONSTANTP is now able to determine constantness of
     more complex forms, including calls to constant-foldable standardized
     functions and some special forms beyond QUOTE.
